      project
NEW - Dropdown lists are now set globally and at Project level
NEW - Uses class.jabber.php for Jabber notifications
NEW - Uses class.phpmailer for email notifications
NEW - SMTP for email notifications
NEW - XML-RPC interface for opening/closing tasks, and retriving user details
NEW - New user accounts use MD5 for passwords.

IMPROVED - Reliability of Jabber notifications
IMPROVED - Admin and Project Manager areas are more consistant and easy to
           navigate
IMPROVED - Layout and rendering
IMPROVED - Speed of changing tabs (uses DHTML instead of a page-reload)
IMPROVED - RSS feed
IMPROVED - Much code has been moved to classes/functions (so is much more
           re-usable)
IMPROVED - Statusbar is now used for almost all updates, and fades in a
           very pretty way.
IMPROVED - Now formats dates using strftime() to achieve localised date strings

FIXED - Permissions that were broken in last release
FIXED - Now checks permissions before delivering attachments
FIXED - Re-enabled Project Manager requests, adding a 'deny' link with
        reason box


0.9.7 - 22 January 2005

NEW: Easy setup script
NEW: User groups are now global AND project-level
NEW: Group permissions now more fine-grained
NEW: No more intermediate pages after submitting forms - new statusbar instead
NEW: Task dependencies and blocks
NEW: phpMarkdown used in project blurb, task details and comments areas
     (allows document markup)
NEW: Users can request a link to change their password
NEW: Private tasks
NEW: Icons.  Now using an iconset with a compatible licence.

IMPROVED: Notifications no longer get sent to the user making the change
IMPROVED: Method of sending registration confirmation codes
IMPROVED: Anonymous browsing is now a project-level setting
IMPROVED: Bluey theme layout and style.  It almost renders in IE!
IMPROVED: Escaping of special characters in form selects
IMPROVED: Detects php magic quotes setting for task display


0.9.6 - 08 October 2004
