@@ -1,5 +1,7 @@
 RewriteEngine on
 
+RewriteRule ^.*\?do=admin&area=prefs$ index.php?do=admin&area=prefs [L]
+
 RewriteRule ^([0-9]+)$ index.php?do=details&id=$1 [L]
 RewriteRule ^task/([0-9]+)$ index.php?do=details&id=$1 [L]
 RewriteRule ^task/([0-9]+)#comment([0-9]+)$ index.php?do=details&id=$1#comment$2 [L]
